--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 services:
+    # Networking
+    # --------------------------
     nginx:
         image: nginx:1.29.4-alpine3.23
         restart: unless-stopped
@@ -21,6 +23,10 @@ services:
             - ./secrets/nginx.conf:/etc/nginx/nginx.conf:ro
         networks:
             - internal
+    # --------------------------
+    #
+    # Storages
+    # --------------------------
     postgresql:
         image: postgres:18.1-alpine3.23
         restart: unless-stopped
@@ -73,6 +79,10 @@ services:
             retries: 2
         networks:
             - internal
+    # --------------------------
+    #
+    # Messaging
+    # --------------------------
     rabbitmq:
         image: rabbitmq:4.2-alpine
         restart: unless-stopped
@@ -90,6 +100,10 @@ services:
             retries: 3
         networks:
             - internal
+    # --------------------------
+    #
+    # Observability
+    # --------------------------
     otel-collector:
         image: otel/opentelemetry-collector-contrib:0.145.0
         volumes:
@@ -168,6 +182,10 @@ services:
                 condition: service_healthy
         networks:
             - internal
+    # --------------------------
+    #
+    # Services
+    # --------------------------
     leonardo:
         image: anafro/hyperstream-leonardo:v0.0.0-beta
         restart: unless-stopped
@@ -227,6 +245,7 @@ services:
                 condition: service_healthy
             postgresql:
                 condition: service_healthy
+    # --------------------------
 
 volumes:
     postgresql:
