--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -196,13 +196,17 @@ services:
     # Services
     # --------------------------
     leonardo:
-        image: anafro/hyperstream-leonardo:v0.0.0-beta
         container_name: leonardo
+        image: anafro/hyperstream-leonardo:v0.0.0-beta.3
         restart: unless-stopped
+        volumes:
+            - "./bin/opentelemetry-javaagent.jar:/app/opentelemetry-agent.jar"
         depends_on:
             localstack:
                 condition: service_healthy
             rabbitmq:
+                condition: service_healthy
+            otel-collector:
                 condition: service_healthy
         healthcheck:
             test: ["CMD-SHELL", "nc -z localhost 5001"]
@@ -213,7 +217,16 @@ services:
             retries: 3
         networks:
             - internal
-        entrypoint: [""]
+        entrypoint:
+            [
+                "java",
+                "-javaagent:/app/opentelemetry-agent.jar",
+                "-Dotel.service.name=leonardo",
+                "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317",
+                "-Dotel.exporter.otlp.protocol=grpc",
+                "-jar",
+                "/app/Hyperstream-Leonardo.jar",
+            ]
         command:
             [
                 "--width",
@@ -222,6 +235,8 @@ services:
                 "1024",
                 "--generator",
                 "lmc",
+                "--host",
+                "0.0.0.0",
                 "--port",
                 "5001",
                 "nocache",
