--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -271,6 +271,8 @@ services:
                 condition: service_healthy
             postgresql:
                 condition: service_healthy
+            otel-collector:
+                condition: service_healthy
     # --------------------------
 
 volumes:
